--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 div.h1{
-    margin: 0 auto;
-    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
     font-style: bold;
 }
 
