--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 div.h1{
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
-    border: bold black;
+    width: 150px;
+    border: solid black;
     font-style: bold;
 }
 
