--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
 div.h1{
     margin-left: auto;
     margin-right: auto;
+    border-style: solid;
+    border-width: 5px;
+    border-color: black;
     font-style: bold;
 }
 
