--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
+div.h1{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 60%;
+    padding: 5px;
+    border: solid black;
+    font-style: bold;
+}
+
 div.navbar{
     width: 200px;
     border-radius: 15px;
@@ -27,4 +37,5 @@ li.nav{
 p{
     margin-left: auto;
     margin-right: auto;
+    width: 300px;
 }
