--- a/main.css
+++ b/main.css
@@ -37,5 +37,11 @@ li.nav{
 p{
     margin-left: auto;
     margin-right: auto;
-    width: 300px;
+    width: 200px;
+}
+
+footer {
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
 }
